Fri Aug 15 14:37:51 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/DynamicAny/DynAny_i.cpp:

	  Added .in() to usage of CORBA::TypeCode_var.

Fri Aug 15 14:32:54 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/ConstantDef_i.cpp:
        * orbsvcs/orbsvcsProperty/CosPropertyService_i.cpp:

	  Fixed constructors of CORBA::Any and TAO::Unknown_IDL_Type
	  to match recent changes to these classes.

Fri Aug 15 14:23:09 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/DynAny_Test/data.cpp:
        * tests/DynAny_Testdata.h:
        * tests/DynAny_Testtest_dynany.cpp:

	  Changes required by the removal of the deprecated Any constructor in
	  the checkin of

	  Thu Aug 14 15:09:52 2003  Jeff Parsons <j.parsons@vanderbilt.edu>.

Fri Aug 15 16:41:37 2003  Simon McQueen  <sm@prismtechnologies.com>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp (start_server_i):

          Removed avoid zombies option. Was causing exception on various
          Unix flavours. Thanks to Torsten Kuepper for reporting the problem.
          This closes bug #1557.

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp (list):

          Added initialisation to prevent problem when list attempt is made
          before an activator has been registered. Thanks to <jones_s@ociweb.com>
          for reporting this. This closes bug #1562.

Fri Aug 15 14:58:53 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/examples/RtEC/IIOPGateway/EC.cpp:
        * orbsvcs/examples/RtEC/IIOPGateway/Gateway.cpp:
          Fixes for emulated exceptions, will also fix the fuzz error.

Fri Aug 15 14:28:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/examples/RtEC/IIOPGateway/Supplier.cpp:
          Increased the number of events to send before quitting

        * orbsvcs/orbsvcs/Event/EC_Gateway_IIOP.{h,cpp}:
          Added ability to suspend and resume the connection to the supplier
          ec.
